--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sensible-sdk",
-  "version": "7.4.0",
+  "name": "@cyio/sensible-sdk",
+  "version": "7.4.1",
   "description": "Sensible-SDK",
   "main": "dist/index.js",
   "browser": "dist/sensible.browser.min.js",
